<resources>
    <string name="app_name">JetBrains</string>

    <!--  well, at first I wanna add localization feature, will do it in the next update  -->

    <string name="search">Find your preferred IDE</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>


    <!-- Profile -->
    <string name="profile_hook">Meet the Dev</string>
    <string name="profile_name">Agus Ardiansyah Nh</string>
    <string name="profile_email">aguzardiansyahnh@gmail.com</string>

</resources>