...
    ){ innerPadding ->
        LazyColumn(
            contentPadding = innerPadding,
            modifier = modifier
                .padding(start = 16.dp, end = 16.dp)
                .fillMaxSize()
                .testTag("homeScreen")
        ) {
            item {
                Card(
                    modifier = modifier.padding(4.dp),
                    shape = RoundedCornerShape(16.dp)
                ) {
...
